# adaptplm

./: .gitignore  README.md  README_DOWNSTREAM.md  README_EMBEDDING.md  README_MASKED_LM.md  adaptplm_v1_0_0.def  adaptplm_v1_1_0.def  environment.yml  enzrxnpred2_v12_2_0.def  pyproject.toml  requirements_for_singularity.txt
adaptplm/core/: constants.py  default_path.py  package_version.py
adaptplm/data/: crc64_embedding_data.py  extract_seq_kcat.py  original_enz_activity_dense_screen_datasource.py  parse_blast_result.py
adaptplm/extension/: bio_ext.py  rdkit_ext.py  torch_ext.py
adaptplm/mlm/: calculate_sampling_weight.py
adaptplm/preprocess/: make_public_version_enzsrp.py  split_dataframe.py
adaptplm/viz/: check_tokenized_reactions.py  check_vocab_size.py  exp_result.py  n_items_in_datasets.py  training_curb.py
docs/: README_DOWNSTREAM.md  RELEASE.md  RESULTS.md
enzrxnpred2/core/: package_version.py
enzrxnpred2/data/: cd_hit_result_datasource.py  enz_seq_rxn_datasource.py  esp_datasource.py  extract_seq_kcat.py  load_interproscan_tsv.py  parse_blast_result.py  seq_embedding_data.py  turnup_datasource.py
enzrxnpred2/domain/: ec_number.py  regex_tokenizer.py
enzrxnpred2/extension/: matplotlib_ext.py  optuna_ext.py  seed.py
enzrxnpred2/mlm/: calculate_sampling_weight.py  construct_vocab.py  train_seq_rxn_encoder.py
enzrxnpred2/preprocess/: clean_datasets.py  create_filtered_dataset.py
enzrxnpred2/viz/: check_n_tokens_rxn.py  check_tokenized_reactions.py  check_vocab_size.py  exp_result.py  n_items_in_datasets.py  training_curb.py  (+1 more)
(+155 files in other folders)
